cmake_minimum_required(VERSION 3.31)

# 项目定义
project("MulNX_CS2")
# 版本定义
add_definitions(-DMulNXVersion=\"B0.1.0C0.11.0\")

# 启用 LTO（仅 Release 配置）
include(CheckIPOSupported)
check_ipo_supported(RESULT IPO?)
if(IPO?)
    set(CMAKE_INTERPROCEDURAL_OPTIMIZATION_CONFIG Release)
    message(STATUS "IPO/LTO 在 Release 模式可用")
else()
    message(WARNING "IPO/LTO 不支持！")
endif()

# C++ 标准设置
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# 添加编译选项
add_compile_options(/MP)
add_compile_options(/utf-8)
add_compile_options(/EHsc)
add_compile_options(/Zc:__cplusplus) # 让MSVC标注正确的cpp版本

# 定义全局宏
add_compile_definitions(NOMINMAX) # 防止windows的min max宏破坏程序
add_compile_definitions(WIN32_LEAN_AND_MEAN) # 至少能让它少引入点东西
add_compile_definitions(ASIO_STANDALONE) # 独立版本的asio，不引入boost

# 以当前目录为唯一的起点，被所有子目录共享
include_directories(${CMAKE_SOURCE_DIR})

# 添加子目录
add_subdirectory("MulNXThirdParty")
add_subdirectory("MulNX")
add_subdirectory("MulNXExtensions")
add_subdirectory("CS2OBTool")
add_subdirectory("CS2Injector")

# 定义目标路径
set(InjecterPath ${CMAKE_SOURCE_DIR}/bin/MulNX/MulNX)
set(DllPath ${InjecterPath}/DLLToCS)

# 处理 CS2Injector 目标
set_target_properties(CS2Injector PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY "${InjecterPath}"
    RUNTIME_OUTPUT_DIRECTORY_DEBUG "${InjecterPath}"
    RUNTIME_OUTPUT_DIRECTORY_RELEASE "${InjecterPath}"
    RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${InjecterPath}"
    RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL "${InjecterPath}"
)

# 处理 CS2OBTool 目标
set_target_properties(CS2OBTool PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY "${DllPath}"
    RUNTIME_OUTPUT_DIRECTORY_DEBUG "${DllPath}"
    RUNTIME_OUTPUT_DIRECTORY_RELEASE "${DllPath}"
    RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${DllPath}"
    RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL "${DllPath}"
)